# Chashurina-brows

./: .coverage  .env  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  manage.py  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
main/: admin.py  forms.py  models.py  telegram_sender.py  tests.py  urls.py  utils.py  views.py
main/migrations/: 0001_initial.py  0002_alter_notes_created_at.py  0002_alter_service_price.py  0002_errors_freedate_remove_notes_data_and_more.py  0003_freedate_now_alter_notes_created_at.py  0003_rename_data_notes_date.py  0004_alter_freedate_now.py  0004_freedate_remove_notes_description.py  0005_freedate_free.py  0006_alter_notes_date_alter_notes_time.py  0007_service_durations.py  0008_errors.py
main/static/css/: style.css
main/templates/: base.html
main/templates/main/: appointment.html  index.html  report_errors.html  success.html
nginx/: browist.conf  default.conf  nginx.conf
website_browist/: asgi.py  settings.py  urls.py  wsgi.py
